# reservsim_ML

./: .gitignore  AGENTS.md  README.md  benchmark_summary.csv  build  test  webui  workflow
benchmarks/: benchmark_model1.csv  benchmark_model2.csv  benchmark_summary.csv
cases/model1/: history_controls.csv  history_ml_config.yaml  history_observations.csv  ml_scenarios.csv  model.yaml  run  run.env  surrogate_config.yaml
cases/model2/: model.yaml  run.env
cases/model3/: model.yaml  run.env
core-cpp/: CMakeLists.txt
core-cpp/include/sim/: config.hpp  error.hpp  pressure.hpp  state.hpp  transport.hpp
core-cpp/src/: config_parser.cpp  main.cpp  pressure_assembly.cpp  pressure_cuda.cu  state_init.cpp  transport.cpp  transport_cuda.cu
core-cpp/tests/: config_parser_tests.cpp  pressure_assembly_tests.cpp  sim_run_contract_tests.cpp  state_init_tests.cpp  transport_tests.cpp
core-cpp/tests/fixtures/: bad_layer_count.yaml  bad_range.yaml  bad_yaml.yaml  history_controls.csv  history_observations.csv  layered_case.yaml  missing_required.yaml  valid_3d_case.yaml  valid_case.yaml  valid_history_case.yaml  wells_case.yaml
docs/: 00_project_charter.md  01_problem_statement.md  02_equations_readable.html  02_physics_math.md  02a_governing_equation_derivation.md  03_numerical_methods.md  04_software_architecture.md  05_gpu_optimization_plan.md  06_surrogate_ml_plan.md  07_validation_and_benchmarking.md  08_visualization_and_reporting.md  09_execution_timeline_2weeks.md  10_risks_and_mitigations.md  11_definition_of_done.md  12_agent_task_board.md  13_runbook_commands.md  14_artifact_spec.md
python/ml/: build_history_match_dataset.py  eval_history_matcher.py  eval_surrogate.py  predict_surrogate.py  score_history_match.py  train_history_matcher.py  train_surrogate.py
python/viz/: make_animation.py  make_figures.py
tools/: benchmark_matrix.py  clean_outputs.sh  compile_tool.sh  doctor.sh  gpu_check.sh  history_eval.py  history_run.sh  mcp_server.py  mcp_tools.sh  ml_data_generate.sh  model_run.sh  new_model  parity_report.py  plot_run.sh  validate_run.py  workflow_gui.py  workflow_web_ui.py
